[tool.poetry]
name = "goit-python-web-homework-06"
version = "0.1.0"
description = ""
authors = ["Artem-Shabaltun <134101240+Artem-Shabaltun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
faker = "^19.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
